<resources>
    <string name="app_name">e游锦州</string>
    <string name="action_settings">Settings</string>
    <string name="version_name">当前版本：</string>
    <string name="can_not_find_version_name">无法获取版本信息</string>
    <string name="impression_detail_publish_way">来自e游锦州Android版</string>
    <string name="please_login_toast">您还未登陆，请使用第三方账号登陆!</string>
    <string name="expo_title">世博攻略</string>
    <string name="expo_nature_title">自然与科技</string>
    <string name="expo_nature">锦州世博园园区总占地面积7平方公里，其中陆地面积3.3平方公里，水域面积3.7平方公里，是全球规模最大的园林博览园区。</string>
    <string name="expo_city_title">城市与生活</string>
    <string name="expo_city">锦州世博园有世界最大的万花谷---蝶恋花谷及四条花带，种植各种花卉，其中种植了上百种郁金香，世博园将是花的海洋。</string>
    <string name="expo_travel_title">交通指南</string>
    <string name="expo_travel">交通是旅游的第一步，了解景区的交通路线对于一个体验良好的旅游必不可少</string>
    <string name="expo_travel_text1">"\u0009\u0009\u0009①锦州市出发--市府路--中央南街--环岛--渤海大道--阜锦线--渤海大道--S209--崔屯村--终点。"</string>
    <string name="expo_travel_text2">"\u0009\u0009\u0009②锦州市--中央大街--云飞大桥--锦娘路--龙栖湾大道--终点。"</string>
    <string name="expo_travel_text3">"\u0009\u0009\u0009③京沈高速锦州东出口--龙栖湾大道--终点。"</string>
    <string name="expo_travel_text4">"\u0009\u0009\u0009①世园1号线(火车站-世园会)，途经火车站、交通银行、凌安支行、农行大厦、市交通局、世园会共5站。"</string>
    <string name="guojishengtaiguan_txt">"\u0009\u0009\u0009国际古生态馆建筑面积7817平方米，共三层。馆内以古生态为主题，是世界首座将远古生态系统复原为全部内容的展览馆。本馆是世界上最大的恐龙馆，馆内由100多条恐龙化石形成壮观的恐龙阵，其中马门溪龙为亚洲最长。同时珍藏大量古生物标本，将带你走进威力无限的化石世界，近距离观赏亿万年前的化石生命体，了解地球版块的漂移、气候的转变及生命从简单到复制、低等到高等的进化过程，具有很强的展览性和研究性。"</string>
    <string name="guojishengtaiguan_txt1">"\u0009\u0009\u0009The International Museum of ancient building area of 7817 square meters, a total of three. The ancient ecological theme, is the world's first ancient ecological restoration for all the contents of the exhibition hall. The museum is the world's largest dinosaur museum, the museum by more than 100 dinosaur fossils formed spectacular dinosaur array. The Mamenchisaurus dragon is the longest in Asia. While the collection of a large number of ancient biological specimens that will take you into the limitless power of fossils in the world, close-up view of life fossils millions of years ago, understanding of earth's tectonic plates shift, climate change and the life from simple to copy, low until the higher evolutionary process, has a strong exhibition and research."</string>
    <string name="shuiyunzhiwujuchang_txt">"\u0009\u0009\u0009水韵之舞剧场建筑面积9565平方米，建筑高度29.05米，观众厅可容纳999人，是世博园大型演艺中心，也是精品晚会"锦绣神州"的演出场所。建筑造型以一组跳动的音阶形成剧院的主体，剧场外墙的篆书雕刻，让传统文化充满最前沿的张力，渲染着浓郁的文化氛围，人们在这里可以感受到一种传统长卷式洄游的空间体验。"</string>
    <string name="shuiyunzhiwujuchang_txt1">"\u0009\u0009\u0009Water rhyme Dance Theater construction area of 9565 square meters, the building height of 29.05 meters, the audience hall can accommodate 999 people, is a large performing arts center in Expo Park, is also a boutique show "Splendid China". Main architectural style with a group of beating the scale formation of the theatre, theatre wall seal engraving, let traditional culture full of the tension of the frontier, rendering of the rich cultural atmosphere, people here can feel a kind of traditional scroll type migration experience."</string>
    <string name="baihuaguan_txt">"\u0009\u0009\u0009百花馆主要以科普教育、花艺文化、环保为建设理念。展示的各种花卉能充分利用其本身的生长特点，让人们欣赏到大自然给予人类多姿多彩的花卉世界。"</string>
    <string name="baihuaguan_txt1">"\u0009\u0009\u0009Flower house mainly in science education, culture and environmental protection for the construction of concept art. All kinds of flowers show can make full use of the growth of its own characteristics, let people enjoy nature gives human colorful flowers in the world."</string>
    <string name="xuexiaojianjie1">\u0009\u0009\u0009辽宁工业大学始建于1951年，坐落于依山傍海、交通发达的辽宁西部中心城市--锦州。校园占地面积1000余亩，建筑面积36万余平方米，各类在校学生18000余人，是一所以工为主，理、工、经、管、文、法、艺术协调发展的省属全日制多科性大学。2013年5月，学校入选国家“中西部高校基础能力建设工程”重点建设高校。</string>
    <string name="xuexiaojianjie2">\u0009\u0009\u0009学校现有21个教学院、部、中心，7个一级学科硕士学位授权点，35个二级学科硕士学位授权点，10个专业学位授权领域，53个本科专业。形成了以本科教育为主，兼有研究生教育、留学生教育、继续教育的多层次办学格局。</string>
    <string name="xuexiaojianjie3">\u0009\u0009\u0009学校拥有省特色学科项目1项，省培育学科项目1项，省哲学社会科学重点建设学科1个；省重点实验室6个，省高校重点实验室3个，中央与地方共建高校特色优势学科实验室5个，省级工程技术研究中心2个，省级实验教学示范中心5个；国家级特色专业建设点3个，国家级专业综合改革试点项目1个，省级示范专业4个，省级特色专业2个，省高校本科综合改革试点专业6个，省高校本科工程人才培养模式改革试点专业5个，省高校本科重点支持专业2个；省高等学校重点学科领域研究生培养基地1个，省汽车制造紧缺人才培养基地1个；省2011协同创新中心1个，省高等学校对接产业集群协同创新基地2个。</string>
    <string name="xuexiaojianjie4">\u0009\u0009\u0009学校拥有一支结构合理、素质优良的师资队伍。现有教职工1200多人，其中教授、副教授480多人。教师中享受国务院政府特殊津贴11人,辽宁省教学名师9人，辽宁省优秀专家2人，辽宁省学科带头人2人，辽宁省专业带头人4人，辽宁省优秀青年骨干教师36人，辽宁省“百千万人才工程”百人层次和千人层次人选17人，辽宁省中青年社会科学人才百人层次3人，辽宁省中青年哲学社会科学人才工程4人。</string>
    <string name="xuexiaojianjie5">\u0009\u0009\u0009学校办学条件优越，设施完备。各类功能教室6.6万平方米，用于教学的计算机5500多台；拥有4个实训中心和60多个基础实验室、专业实验室；教学科研仪器设备总值为19600多万元。图书信息楼建筑面积39000平方米，功能完善，环境优雅，馆藏文献资料120多万册；校园建有先进的网络信息平台，为学生了解信息、自主学习和日常生活创造了便利条件。</string>
    <string name="xuexiaojianjie6">\u0009\u0009\u0009学校始终坚持人才培养质量是生命线的办学理念，重视学生素质教育，强化学生实践能力和创新精神的培养。建有1个近6万平方米的大学生实验实训中心，1个国家级大学生校外实践教育基地，4个省级大学生实践教育基地。近三年，学生在省级以上创新竞赛活动中，获国家级奖121项，省级奖1270项。学校教学管理严格，学风浓郁，人才培养质量受到社会充分肯定。毕业生综合素质高、适应能力强广受社会欢迎，多年来毕业生就业率都在95%以上。</string>
    <string name="xuexiaojianjie7">\u0009\u0009\u0009学校注重科技团队、科技人才的建设与培养。五年来，引进了中组部特聘专家1人；拥有辽宁省高校优秀科技创新团队2个；8人入选辽宁省教育厅第一层次优秀人才支持计划，20人入选辽宁省教育厅第二层次优秀人才支持计划。1人入选2014年汤森路透发布的全球高引用科学家榜单，并入选世界著名出版公司爱思唯尔（Elsevier）发布的中国高被引学者（Most Cited Chinese Researchers）榜单，成为最具世界影响力的中国学者之一。</string>
    <string name="xuexiaojianjie8">\u0009\u0009\u0009学校具有较强的科研能力，近五年共完成了包括国家自然科学基金、“863”计划、“973”计划、国家重大支撑计划、国家重大专项及省部级以上各类科研课题120余项，获省部级以上奖励20余项，被国际三大检索收录的学术论文900余篇。学校入选2015年中国大学ESI高被引论文排行榜100强高校。</string>
    <string name="xuexiaojianjie9">\u0009\u0009\u0009学校国际交流与合作成效显著。先后与美国、德国、英国等国家20多所大学建立了校际合作关系，扩大了学校的国际影响力。2013年学校获批国家来华留学生奖学金资格高校。目前留学生人数达到500人，其中硕士留学生45人。</string>
    <string name="xuexiaojianjie10">\u0009\u0009\u0009校园典雅幽静、整洁规范、安全有序，是锦州市政府命名的“花园式单位”，辽宁省“思想政治工作先进单位”、“绿化先进单位”，省教育厅命名的“平安校园”、“依法治校示范校”、“安全文明校园”，国家体育总局授予的“全国群众体育先进单位”，中共辽宁省委、辽宁省人民政府命名的“文明单位标兵”。</string>
    <string name="xuexiaojianjie11">\u0009\u0009\u0009光阴荏苒，沧海桑田，60余年风雨兼程，辽宁工业大学形成了独具特色的优良传统，积淀了弥足珍贵的精神财富。今天的辽工大全体师生员工正以饱满的热情，按照“提高层次，充实内涵，突出特色，加快发展”的发展战略，秉承“砺器悟道”的校训，深化改革，加快发展，全面提升学校核心竞争力，努力把辽宁工业大学建设成为省内一流、国内知名、国际上有一定影响的多科性高水平大学，为国家和地方经济社会发展作出新的更大的贡献！</string>
    <string name="xiaobiaoxiaoxun1">\u0009\u0009\u0009标识的主体由汉字“辽”的抽象图形组成，“辽”字的下部又很巧妙地形成了一本打开的书。抽象与具象的结合，文字与图形的延续，体现了学院注重教学、以学为本、探求真理、学术精湛的思想内涵。</string>
    <string name="xiaobiaoxiaoxun2">\u0009\u0009\u0009标识主体形象又可看成是粗壮有力的汉字“工”，突出体现了我校工科院校的性质和传统优势，以工科专业为主体，汇聚理、商、人文等多学科的特色。“工”字的粗壮，传达着学校在新时代的发展过程中，保持工科专业的优势同时不断扩大自己的发展领域。</string>
    <string name="xiaobiaoxiaoxun3">\u0009\u0009\u0009标识主体背景是经过弱化的一大一小两个镂空椭圆形。两个椭圆形的轨迹相互交叉，相互贯通。背景图形贯穿整个标识图案，象征着宇宙和未来。简洁的背景图案衬托着醒目的主体形象，使整个图案具有统一感。主体与背景相结合，既有形象上的方与圆对比，又具备时空中虚与实的沟通。对比中体现深邃的理性，沟通中反映时空的永恒，这一形象昭示着学校面向未来的发展宏图。</string>
    <string name="xiaobiaoxiaoxun4">\u0009\u0009\u0009整体标识下部书写数字“1951”，表达我校始建于1951年，明确了学校建校的时间，展示了学校悠久的历史。</string>
    <string name="xiaobiaoxiaoxun5">\u0009\u0009\u0009主体图案的外围是色彩渐变的圆形边徽。整体颜色青春、明快、亮丽符合工科院校的特点，彰显了学校“开放、自由、创新”的校园文化。整体标识厚重、朝气、富有现代感，是学校精神文化、价值理念的凝结。</string>
    <string name="xiaobiaoxiaoxun6">\u0009\u0009\u0009“砺器悟道”的直接含义：在“器”的磨砺中领会“道”的深远。</string>
    <string name="xiaobiaoxiaoxun7">\u0009\u0009\u0009“砺”：一意为磨刀石，见《荀子·劝学》“金就砺则利”；一意为磨，见《书·费誓》“砺乃锋刃”。</string>
    <string name="xiaobiaoxiaoxun8">\u0009\u0009\u0009“器”：器皿、工具。</string>
    <string name="xiaobiaoxiaoxun9">\u0009\u0009\u0009“悟”：领会、理解、觉醒。</string>
    <string name="xiaobiaoxiaoxun10">\u0009\u0009\u0009“道”：一意为宇宙万物的本原，见《老子》“有物混成，先天地生，可以为天下母，吾不知其名，字之曰道”；一意为人生观、世界观，见《论语·公冶长》“道不行，乘桴浮于海”。</string>
    <string name="xiaobiaoxiaoxun11">\u0009\u0009\u0009深入理解“砺器悟道”的含义，需要在“器”与“道”的辩证联系中把握以下三个方面的关系：</string>
    <string name="xiaobiaoxiaoxun12">\u0009\u0009\u0009一、“制器”与“砺器”的关系</string>
    <string name="xiaobiaoxiaoxun13">\u0009\u0009\u0009“制器”即制造工具，狭义地讲，工学院就是研究和传授制造工具的知识与技能的高等学校。但是，同样是工具的制造，方法目的不同，精神状态不同，其结果就会大不相同，而“砺器”指的是高水准的工具制造。</string>
    <string name="xiaobiaoxiaoxun14">\u0009\u0009\u0009可以从两个方面来解说“砺器”：其一，“砺器”体现着坚韧不拔、百折不挠、持之以恒的刻苦精神，不为挫折而泄气，不被困难所吓倒，有“铁杵磨成针”的信念和韧劲；其二，“砺器”体现着认真细致、精益求精的学习和工作的态度，不只求做完，更要求做好做精，强调制造出高质量的精品。</string>
    <string name="xiaobiaoxiaoxun15">\u0009\u0009\u0009在我们的办学思想和育人方针中，要注重培养师生的刻苦精神和精益求精的学习与工作的态度，克服脆弱和做事不认真的思想弊病，掌握扎实的专业知识与精湛的实践技能，以踏实的作风、创新的观念高质量地完成各项学习工作任务，培养一流人才，争创一流佳绩，高水准地实现学校的办学目标。</string>
    <string name="xiaobiaoxiaoxun16">\u0009\u0009\u0009二、“事理”与“道理”的关系</string>
    <string name="xiaobiaoxiaoxun17">\u0009\u0009\u0009“事理”是关于具体事物和专业领域的知识，是学校直接的授课内容；“道理”则是关于“道”的理论，是从自然与社会生活的具体“事理”中所总结概括的共性本质，既体现着对“事理”的提炼，也体现着对“事理”的深化。在学校教育中，使学生明白“道理”，掌握科学的思维方法，提高道德境界，是基本的办学任务。</string>
    <string name="xiaobiaoxiaoxun18">\u0009\u0009\u0009可以从两个方面来解说“道理”：其一，“道理”是对具体专业知识的共性提炼，体现为反映本质规律的哲理，并具有指导实践的方法论意义；其二，“道理”突出地表现为正确指导社会生活和处理人际关系的道德原则，规范人的行为，提高人的情操为实现有创造、有价值的人生目标而导航。</string>
    <string name="xiaobiaoxiaoxun19">\u0009\u0009\u0009我们在办学的过程中，要遵循“事理”，更要透彻地掌握和贯彻“道理”；在知识的传授上，要认真地“授人以鱼”，更要强调“授人以渔”，重在使学生把握科学的思想方法，树立高尚的道德情操，真正实现授道解惑的育人目的。</string>
    <string name="xiaobiaoxiaoxun20">\u0009\u0009\u0009三、“砺器”与“悟道”的关系</string>
    <string name="xiaobiaoxiaoxun21">\u0009\u0009\u0009“器”与“道”是对客观世界进行本体分析和本质探索的一对范畴。《周易·系辞传》中讲道：“形而上者谓之道，形而下者谓之器”。“砺器”与“悟道”的关系从“器”与“道”的联系中，强调了“砺器”的宗旨与“悟道”的途径。</string>
    <string name="xiaobiaoxiaoxun22">\u0009\u0009\u0009一方面，要在“砺器”中“悟道”，我们不是培养头脑简单的工匠，而是要在“器”的磨砺中领会“道”的深远，探索规律，把握本质，作社会主义事业的建设者和接班人；另一方面，要将“悟道”的收获贯彻到“砺器”的实践中，既要志存高远又要脚踏实地，要以科学的思维方法提高分析问题解决问题的能力，以高尚的道德情操做一个有益于人民的人。</string>
    <string name="xiaobiaoxiaoxun23">\u0009\u0009\u0009“砺器悟道”体现了科技精神与人文精神的结合。砺器，即踏踏实实、精益求精地刻苦钻研科学文化知识，提升科学素质，培养高新技术人才；悟道，即探索规律，追求真理，树立正确的世界观、人生观和价值观，提升人文素质，培养出懂天道、世道、人道，明事理、道理的综合型人才。 </string>
    <string name="xiaobiaoxiaoxun24">\u0009\u0009\u0009“砺器悟道”体现了“务实”与“求真”的统一。“砺器”要求从实际出发，勤恳做事，老实做人，既要克服懒散习气，也要去除不切实际的幻想，认真完成每一项任务；“悟道”则是对客观规律的探索，对真理的追求，不满足于肤浅的认识，善于深刻分析，理性思考，自觉遵循科学的发展观。“砺器悟道”是求真务实的方针在办学过程中的切实贯彻。</string>
    <string name="xiaobiaoxiaoxun25">\u0009\u0009\u0009在“砺器悟道”的校训中，“器”与“道”并重，辨证统一，相通相融； “砺”与“悟”并行，遥相呼应，相得益彰。既有古代先哲思想的继承，又有现代教育理念的浸染，贯通古今，广博深远，而且深入浅出，通俗易懂，字简音和，工科院校的特点鲜明，势必会激励全校师生同心协力，共铸辉煌！</string>
    <string name="xianrenlingdao1">\u0009\u0009\u0009党委书记:王建中</string>
    <string name="xianrenlingdao2">\u0009\u0009\u0009王建中，汉族，山西临猗人。1975年8月参加工作，1988年7月加入中国共产党，工学博士，教授，学科带头人，辽宁省优秀专家，北京科技大学博士研究生导师。中国金属学会材料分会副理事长，中国能源学会副会长。</string>
    <string name="xianrenlingdao3">\u0009\u0009\u0009学校校长兼党委副书记:佟绍成  </string>
    <string name="xianrenlingdao4">\u0009\u0009\u0009佟绍成，满族，辽宁省凌海人。1982年8月参加工作，1992年12月加入中国共产党。博士，教授，辽宁省高校教学名师、优秀青年教师、先进科技工作者、中青年学科带头人、学科带头人、优秀专家、"百千万人才工程"百人层次、政府特殊津贴专家，大连理工大学博士研究生导师。全国优秀教师，全国师德先进个人。分别担任国际杂志：IEEE Transactions on Systems，Man and Cybernetics：Systems；International Journal of Fuzzy Systems；International Journal of Innovative Computing，Information and Control编委，入选2014全球高引用科学家。   </string>
    <string name="xianrenlingdao5">\u0009\u0009\u0009学校副校长:李卫民 </string>
    <string name="xianrenlingdao6">\u0009\u0009\u0009李卫民，汉族，辽宁朝阳人。1986年7月参加工作，博士，教授。国家特色专业负责人、省重点实验室主任，辽宁省高校教学名师。担任辽宁省制造业信息化工程专家组成员、辽宁省机械工程学会理事、锦州机械工程学会理事长、九三学社锦州市委主任委员、市人大常委、九三学社辽宁省委常委、省政协委员等社会兼职。    </string>
    <string name="xianrenlingdao7">\u0009\u0009\u0009学校副校长:刘振安 </string>
    <string name="xianrenlingdao8">\u0009\u0009\u0009刘振安，汉族，辽宁省朝阳人。1987年7月参加工作，1986年12月加入中国共产党。法学硕士，研究员。 </string>
    <string name="xianrenlingdao9">\u0009\u0009\u0009学校副校长:谭文东</string>
    <string name="xianrenlingdao10">\u0009\u0009\u0009谭文东，汉族，湖南湘乡人。1990年7月参加工作，1986年6月加入中国共产党，经济学硕士学位，研究员。</string>
    <string name="shoufeibiaozhun1">\u0009\u0009\u00091、学费收取标准：按照物价部门批准并办理收费许可的标准向学生收费。</string>
    <string name="shoufeibiaozhun2">\u0009\u0009\u00092．学费的退费办法：</string>
    <string name="shoufeibiaozhun3">\u0009\u0009\u0009学生因故退学或提前结束学业，学校根据学生实际学习时间，按月计退剩余的学费。</string>
    <string name="shoufeibiaozhun4">\u0009\u0009\u00093、学校对家庭经济困难学生的扶困助学的具体措施：</string>
    <string name="shoufeibiaozhun5">\u0009\u0009\u0009奖学金：我校设有国家奖学金、国家励志奖学金、省政府奖学金、校优秀学生奖学金等多项奖励政策和措施，凡我校在籍学生均有资格获得奖学金。</string>
</resources>