<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".School.XuexiaojianjieActivity">
    <include
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        layout="@layout/head_activity" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="校标说明"
                android:gravity="center"
                android:textSize="20sp"
                />
            <ImageView
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/xiaobiaoxiaoxun"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun1"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun2"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun3"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun4"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun5"
                />
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="校训"
                android:gravity="center"
                android:textSize="20sp"
                />
            <ImageView
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/xiaobiaoxiaoxun2"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun6"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun7"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun8"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun9"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun10"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun11"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun12"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun13"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun14"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun15"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun16"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun17"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun18"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun19"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun20"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun21"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun22"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun23"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun24"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaobiaoxiaoxun25"
                />
        </LinearLayout>

    </ScrollView>

</LinearLayout>

