<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".School.XuexiaojianjieActivity">
    <include
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        layout="@layout/head_activity" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="辽宁工业大学简介"
        android:gravity="center"
        android:textSize="20sp"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/xuexiaojianjie1"
        />
    <ImageView
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/xuexiaojianjie1"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/xuexiaojianjie2"
        />
    <ImageView
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/xuexiaojianjie2"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/xuexiaojianjie3"
        />
    <ImageView
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/xuexiaojianjie3"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/xuexiaojianjie4"
        />
    <ImageView
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/xuexiaojianjie4"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/xuexiaojianjie5"
        />
    <ImageView
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/xuexiaojianjie5"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/xuexiaojianjie6"
        />
    <ImageView
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/xuexiaojianjie6"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/xuexiaojianjie7"
        />
    <ImageView
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/xuaxiaojianjie7"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/xuexiaojianjie8"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/xuexiaojianjie9"
        />
    <ImageView
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/xuexiaojianjie8"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/xuexiaojianjie10"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xuexiaojianjie11"
        />
</LinearLayout>

    </ScrollView>

</LinearLayout>
