<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".School.XuexiaojianjieActivity">
    <include
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        layout="@layout/head_activity" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xianrenlingdao1"
                android:gravity="center"
                android:textSize="20sp"
                />
            <ImageView
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/xianrenlingdao1"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xianrenlingdao2"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xianrenlingdao3"
                android:gravity="center"
                android:textSize="20sp"
                />
            <ImageView
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/xianrenlingdao2"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xianrenlingdao4"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xianrenlingdao5"
                android:gravity="center"
                android:textSize="20sp"
                />
            <ImageView
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/xianrenlingdao3"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xianrenlingdao6"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xianrenlingdao7"
                android:gravity="center"
                android:textSize="20sp"
                />
            <ImageView
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/xianrenlingdao4"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xianrenlingdao8"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xianrenlingdao9"
                android:gravity="center"
                android:textSize="20sp"
                />
            <ImageView
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/xianrenlingdao5"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xianrenlingdao10"
                />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>